--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,25 +13,25 @@
         android:theme="@style/Theme.Project13"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.BaseActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Activity.DetailActivity"
-            android:exported="true">
-
-        </activity>
-        <activity
             android:name=".Activity.IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".Activity.MainActivity"
-            android:exported="true" />
+            android:exported="false" />
+
+        <activity
+            android:name=".Activity.CartActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".Activity.DetailActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
