--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,23 +12,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project13"
         tools:targetApi="31">
+
         <activity
             android:name=".Activity.IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".Activity.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.LoginActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.MainActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.CartActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.DetailActivity"
             android:exported="false" />
